configs/argocd/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - argocd.lab.whitworth.nz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
          weight: 1
